Closed Bug 376385 Opened 18 years ago Closed 18 years ago

nsSchemaValidator::Validate() wrongly fails due to xsi:type resolution

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sspeiche, Assigned: sspeiche)

Details

(Keywords: fixed1.8.0.12, fixed1.8.1.4)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a3pre) Gecko/20070305 Minefield/3.0a3pre Build Identifier: Missed this case in bug 375983 , its blocking submission Reproducible: Always
Attached patch fixes regression (obsolete) — Splinter Review
Attachment #260486 - Flags: review?(aaronr)
Attached file patch take 2
Attachment #260486 - Attachment is obsolete: true
Attachment #260489 - Flags: review?(aaronr)
Attachment #260486 - Flags: review?(aaronr)
Attachment #260489 - Attachment mime type: application/octet-stream → text/plain
Attachment #260489 - Flags: review?(aaronr) → review+
Attachment #260489 - Flags: review?(doronr)
Attachment #260489 - Flags: review?(doronr) → review+
Assignee: xforms → sspeiche
Status: UNCONFIRMED → NEW
Ever confirmed: true
checked into trunk for sspeiche
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8 branch on 2007-04-12 checked into 1.8.0 branch on 2007-04-16
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: