NPOTDB schema validator wrongly fails due to xsi:type resolution. Bug 376385, p=sspeiche r=doronr+aaronr